--- a/1.层次分析法.md
+++ b/1.层次分析法.md
@@ -2,6 +2,6 @@
 层次分析法（The analytic hierarchy process，简称AHP），主要用于解决评价类问题（例如：选择那种方案最好，选择哪位员工最优秀）
 ## 评价类问题
 ### 解决评价类问题时要想到三个问题：
-1. 我们评价的目标是什么？\
-2.我们为了达到这个目标有哪几种可选方案？\
+1. 我们评价的目标是什么？    
+2.我们为了达到这个目标有哪几种可选方案？   
 3.评价准则或者数指标是什么？（我们根据什么东西来评价好坏）
