--- a/1.层次分析法.md
+++ b/1.层次分析法.md
@@ -1,10 +1,16 @@
 # 层次分析法
 层次分析法（The analytic hierarchy process，简称AHP），主要用于解决评价类问题（例如：选择那种方案最好，选择哪位员工最优秀）
 ## 评价类问题
-### 解决评价类问题时要想到三个问题：  
-1. 我们评价的目标是什么？   
-2.我们为了达到这个目标有哪几种可选方案？     
-3.评价准则或者数指标是什么？（我们根据什么东西来评价好坏）   
+### 解决评价类问题时要想到三个问题：
+1. 我们评价的目标是什么？  
+2.我们为了达到这个目标有哪几种可选方案？  
+3.评价准则或者数指标是什么？（我们根据什么东西来评价好坏）  
+
 
 正互反矩阵、判断矩阵  
-一种矩阵：各行各列成倍数关系
+一致矩阵：各行各列成倍数关系  
+一致性检验：检验我们构造的判断矩阵和一致矩阵是否有太大的差别
+
+   
+   
+   
