--- a/数学建模零基础/基本介绍.md
+++ b/数学建模零基础/基本介绍.md
@@ -1,1 +1,14 @@
-
+# 1.层次分析法
+# 2.多属性决策模型
+信息集结的方法有很多，如：加权算数平均（WAA）算子、加权集合平均（WGA）算子、有序加权平均（OWA）算子
+# 3.灰色预测
+# 4.图论模型-dijstra算法
+# 5.图论模型-Floyd算法
+# 6.模拟退火算法
+# 7.种群竞争模型
+# 8.排队论
+# 9.线性规划模型
+# 10.非线性规划与01规划模型
+# 11.主成分分析法
+# 12.聚类分析
+# 13.多元回归分析
