--- a/线性代数.md
+++ b/线性代数.md
@@ -1,5 +1,16 @@
 # 1.行列式
+
 ## 1.1 n级行列式
 逆序数    
 对角型行列式：上三角、下三角、主对角线、次对角线  
 行列式展开方式：1.按行展开 2.按列展开 3.按照公式展开
+
+## 1.2 行列式的性质（对行成立的性质对列也成立）
+性质1：行列式转置的值==行列式
+性质2：两行互换行列式变号
+性质3：两行相等，行列式值为零
+性质4：某一行乘以K，等于k乘以行列式
+性质5：两行对应成比例，行列式为零
+性质6：是和的那一行可以分开，其余行保持不变
+性质7：某一行乘以一个数，加到另一行去 行列式值不变  
+推论：两行对应成比例；某一行全为零；两行相等 ——> 行列式为零（充分不必要条件）
